# ai-vacation-companion

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_vacation_companion/core/: data_loader.py  recommender.py
ai_vacation_companion/ui/: cli.py
data/: destinations.json  packages.json
tests/: test_recommender.py
