[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_vacation_companion"
version = "0.1.0"
description = "Standalone CLI for vacation recommendations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.1",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "typer>=0.12.3",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.1",
    "numpy>=1.26.0"
]

[tool.setuptools.packages.find]
include = ["ai_vacation_companion*"]
